Fix(headerComponent): Fix the left and right spacing of the header

--- a/src/components/headerComponent/index.scss
+++ b/src/components/headerComponent/index.scss
@@ -5,10 +5,13 @@
   /* Background color of the header */
   color: #fff;
   /* Text color */
-  padding: 20px;
+  padding: 20px 0;
   /* Padding around the header content */
   box-shadow: 0px 8px 34px 0px #727d871a;
   /* Shadow around the header*/
+  display: flex ;
+  justify-content: center !important;
+  align-items: center;
 
   /* Styles for the content within the header */
   .header-content {
