--- a/src/components/whatDoesTonrowDo/scss/body-what-services.scss
+++ b/src/components/whatDoesTonrowDo/scss/body-what-services.scss
@@ -6,7 +6,7 @@
   align-items: center;
   max-width: 962px;
   width: 87%;
-  padding: 24px 8px;
+  padding: 24px 0px;
   border-radius: 8px;
   border: 1px solid #F3F3F3;
   box-shadow: 0px 8px 34px 0px #727D871A;
@@ -17,7 +17,7 @@
   }
   img,
   p {
-    width: 87%;
+    width: 100%;
   }
   .description-body-SEC-whatDoesTonrowDo {
     display: flex;
@@ -25,6 +25,10 @@
     gap: 16px;
     align-items: center;
     justify-content: center;
+    padding: 0px 24px;
+    @media screen and (max-width: 900px) {
+    text-align: center;
+    }
     h2 {
       font-size: 23px;
       color: var(--black-color);
