--- a/src/components/whatDoesTonrowDo/scss/header-what-services.scss
+++ b/src/components/whatDoesTonrowDo/scss/header-what-services.scss
@@ -8,8 +8,9 @@
   flex-wrap: wrap;
   box-shadow: 0px 2px 8px 0px #727D871A;
   overflow: hidden;
+
   .btn-head-SEC-whatDoesTonrowDo {
-    color: var(--gray-color);
+    color: #8C8C8C;
     font-size: 17px;
     background-color: transparent;
     border: none;
