--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -7,6 +7,7 @@ body{
   margin: 0;
   list-style: none;
   text-decoration: none;
+  background: #FEFEFE;
 }
 
 :root {
